# building-3d

./: LICENSE  README.md  pyproject.toml
algorithm/: assess.py  divide.py  reconstruct.py  texture.py
src/: app.py  app_window.py  bar.py  building_assessment_dialog.py  building_division_dialog.py  building_reconstruction_dialog.py  building_texture_dialog.py  import_dialog.py  importing_dialog.py  panel.py
src/simtoy/base/: editor.py  scene.py
src/simtoy/objects/: builtin.py
ui/: app_window.ui  panel.ui
